# C_socket2socket

./: CMakeLists.txt  main  main.c
UI/: builder.ui  styles.css
quick_socket/: CMakeLists.txt  portable_sockets.h  socket_client.c  socket_client.h  socket_server.c  socket_server.h  socket_util.c  socket_util.h
socket2socket_lib/: CMakeLists.txt  socket2socket_lib.c  socket2socket_lib.h
src/: socket_client.c  socket_client.h  socket_server.c  socket_server.h  socket_util.c  socket_util.h
src/socket2socket_lib/: socket2socket_lib.c  socket2socket_lib.h
test/: CMakeLists.txt  test_server.cpp  test_server.hpp  test_socket2socket.cpp
